# LawGenie

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
src/lawgenie/: .env.example  __init__.py  agents.py  app.py  clause_agents.py  clause_tasks.py  crew.py  models.py  nda_to_check.py  streamlit_app.py  tools.py
